# timeseries_mlops

./: .gitignore  baseline_stats.json  pyproject.toml  run_pipeline_local.py
airflow/dags/: demand_forecast_retrain.py
configs/: pipeline_config.yaml
docker/: Dockerfile
mlruns/0/: meta.yaml
mlruns/356296186950559694/: meta.yaml
mlruns/356296186950559694/2ef810fa47af43ec98b2b231a625a2b0/: meta.yaml
mlruns/356296186950559694/2ef810fa47af43ec98b2b231a625a2b0/artifacts/: data_stats.json  feature_importance.csv  feature_names.txt
mlruns/356296186950559694/2ef810fa47af43ec98b2b231a625a2b0/metrics/: test_mae  test_mape  test_r2  test_rmse  train_mae  train_mape  train_r2  train_rmse  train_time_seconds  val_mae  val_mape  val_r2  val_rmse  val_test_mae_gap
mlruns/356296186950559694/2ef810fa47af43ec98b2b231a625a2b0/outputs/m-7ce05f84ec1d40949de61a92d1b567ab/: meta.yaml
mlruns/356296186950559694/2ef810fa47af43ec98b2b231a625a2b0/params/: data_version
mlruns/356296186950559694/2ef810fa47af43ec98b2b231a625a2b0/tags/: mlflow.runName
mlruns/356296186950559694/models/m-7ce05f84ec1d40949de61a92d1b567ab/: meta.yaml
mlruns/356296186950559694/models/m-7ce05f84ec1d40949de61a92d1b567ab/artifacts/: MLmodel  model.ubj
mlruns/models/demand-forecast-local-model/: meta.yaml
mlruns/models/demand-forecast-local-model/version-1/: meta.yaml
src/demand_forecast/: config.py
src/demand_forecast.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/demand_forecast/data/: preprocessing.py
src/demand_forecast/monitoring/: drift_detector.py
src/demand_forecast/pipelines/: demand_forecast_pipeline.yaml  submit_pipeline.py  vertex_pipeline.py
src/demand_forecast/serving/: api.py
src/demand_forecast/training/: trainer.py
(+16 files in other folders)
