[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demand-forecast"
version = "0.1.0"
description = "MLOps pipeline for CPG demand forecasting"
requires-python = ">=3.10"

# Core dependencies — pinned for reproducibility
dependencies = [
    "pandas>=2.0",
    "numpy>=1.25",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "mlflow>=2.10",
    "pydantic>=2.0",        # data validation — critical for serving
    "fastapi>=0.110",       # model serving API
    "uvicorn>=0.29",        # ASGI server
    "pyyaml>=6.0",
    "google-cloud-storage>=2.14",
    "google-cloud-bigquery>=3.18",
]

[project.optional-dependencies]
# Installed only in CI / dev — keeps production image lean
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",            # fast linter + formatter (replaces flake8+black+isort)
    "pre-commit>=3.7",
]
# Orchestration extras — heavy, only needed in pipeline environments
pipelines = [
    "kfp>=2.7",             # Kubeflow Pipelines SDK
    "apache-airflow>=2.9",
    "google-cloud-aiplatform>=1.50",   # Vertex AI SDK
]

[tool.setuptools.packages.find]
where = ["src"]   # tells setuptools to look in src/ — the "src layout"

# ── Ruff (linter + formatter) ──────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]   # pycodestyle + pyflakes + isort + pyupgrade

# ── Pytest ─────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=demand_forecast --cov-report=term-missing"
